--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pytest-cov = "^4.1.0"
 gunicorn = "^21.2.0"
 python-dotenv = "^1.0.0"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
