--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.10"
 flask = "^2.3.2"
 flake8 = "^5.0.4"
 pytest-cov = "^4.1.0"
-gunicorn = "^21.2.0"
+gunicorn = "21.2.0"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
