--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,10 @@ readme = "README.md"
 packages = [{include = "page_analyzer"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">3.8.1"
+gunicorn = "20.1.0"
 flask = "^2.3.2"
-flake8 = "^5.0.4"
-pytest-cov = "^4.1.0"
-gunicorn = "21.2.0"
+validators = "^0.20.0"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
