--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask = "^2.3.2"
 validators = "^0.20.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.7"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
