--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ validators = "^0.20.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.7"
 requests = "^2.31.0"
+beautifulsoup4 = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
